using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Tags : MonoBehaviour
{
    //animations
    public static string RUN_ANIMATION = "Run";
    public static string ATTACK_ANIMATION = "Attack";
    public static string RUN_ATTACK_ANIMATION = "RunAttack";
    public static string DEAD_ANIMATION = "Dead";
    //triggers
    public static string RUN_TRIGGER = "Run";
    public static string STOP_TRIGGER = "Stop";
    public static string ATTACK_TRIGGER = "Attack";
    public static string JUMP_TRIGGER = "Jump";
    public static string DEAD_TRIGGER = "Dead";
    //tags
    public static string PLAYER_TAG = "Player";
    public static string ENEMY_TAG = "Enemy";
    public static string COIN_TAG = "coin";
}
